added all the files

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,2 @@
-Daniel Komolafe <komolafedanielolaoluwa@gmail.com>
+#List that contains the contibutors to this project.
+Daniel Olaoluwa Komolafe <komolafedanielolaoluwa.com>
